--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "passport": "0.4.0",
     "redis": "2.8.0",
     "redis-mock": "0.21.0",
-    "upath": "1.0.4"
+    "upath": "1.0.4",
+    "ws": "5.2.0"
   },
   "devDependencies": {
     "cross-env": "5.1.1",
