--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
           "type": "node2",
           "request": "launch",
           "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
-          "args": ["--runInBand", "-i", "${file}"],
+          "args": ["--runInBand", "--detectOpenHandles", "-i", "${file}"],
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
           "env": {
