Does testing without coverage work?

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ node_js:
   - "10"
 before_install:
   - npm install
+script:
+  - npm run test-no-cov
+  - npm test
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
