--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
-dist: trusty
-cache:
-  directories:
-    - node_modules
+dist: xenial
+cache: npm
 sudo: false
 node_js:
-  - "8"
-before_install:
-  - npm install
+  - "10"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - mkdir coverage
+  - npm test
 after_script:
-  - codeclimate-test-reporter < coverage/lcov.info
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
