--- a/package.json
+++ b/package.json
@@ -111,19 +111,17 @@
     "supertest": "3.0.0",
     "passport-local": "1.0.0",
     "koa-bodyparser": "4.2.1",
-    "lodash": "4.17.5",
+    "lodash": "4.17.15",
     "del": "3.0.0",
-    "gulp": "3.9.1",
+    "gulp": "4.0.2",
     "gulp-env": "0.4.0",
     "gulp-eslint": "4.0.0",
-    "gulp-load-plugins": "1.5.0",
-    "gulp-open": "2.0.0",
-    "gulp-replace": "0.6.1",
+    "gulp-load-plugins": "2.0.0",
+    "gulp-open": "3.0.1",
+    "gulp-replace": "1.0.0",
     "gulp-babel": "6.1.2",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-register": "6.26.0"
+    "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
