--- a/package.json
+++ b/package.json
@@ -76,14 +76,14 @@
     "documentation": "12.1.1",
     "yamljs": "0.3.0",
     "jest": "24.8.0",
-    "eslint": "4.2.0",
-    "eslint-config-standard": "10.2.1",
-    "eslint-config-semistandard": "11.0.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.1.0",
-    "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-promise": "3.5.0",
-    "eslint-plugin-jsdoc": "3.1.1",
+    "eslint": "6.1.0",
+    "eslint-config-standard": "13.0.1",
+    "eslint-config-semistandard": "14.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-standard": "4.0.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-jsdoc": "15.8.0",
     "supertest": "3.0.0",
     "passport-local": "1.0.0",
     "koa-bodyparser": "4.2.1",
@@ -95,10 +95,9 @@
     "gulp-load-plugins": "2.0.0",
     "gulp-open": "3.0.1",
     "gulp-replace": "1.0.0",
-    "gulp-babel": "6.1.3",
-    "babel-core": "6.26.3",
-    "babel-jest": "23.6.0",
-    "babel-eslint": "7.2.3",
-    "babel-plugin-transform-decorators-legacy": "1.3.5"
+    "gulp-babel": "8.0.0",
+    "@babel/core": "7.5.5",
+    "babel-eslint": "10.0.2",
+    "@babel/plugin-proposal-decorators": "7.4.4"
   }
 }
