Fixing all linting issues

--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -14,7 +14,7 @@
     "jsdoc/check-tag-names": 1,
     "jsdoc/check-types": 1,
     "jsdoc/newline-after-description": 1,
-    "jsdoc/require-description-complete-sentence": 1,
+    "jsdoc/require-description-complete-sentence": 0, // buggy
     "jsdoc/require-hyphen-before-param-description": 1,
     "jsdoc/require-param": 1,
     "jsdoc/require-param-description": 1,
