--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,8 +6,13 @@ engines:
       languages:
         javascript:
           mass_threshold: 90
+  eslint:
+    enabled: false
   fixme:
     enabled: true
+method-lines:
+  config:
+    threshold: 30
 ratings:
   paths:
   - "**.js"
