--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "koa-compress": "3.0.0",
     "koa-favicon": "2.0.1",
     "koa-passport": "4.1.3",
-    "koa-router": "7.4.0",
+    "@koa/router": "8.0.2",
     "koa-session": "5.12.2",
     "koa-static": "5.0.0",
     "node-fs": "0.1.7",
