--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "koa-static": "5.0.0",
     "node-fs": "0.1.7",
     "passport": "0.4.0",
+    "path-to-regexp": "3.1.0",
     "redis": "2.8.0",
     "redis-mock": "0.46.0",
     "upath": "1.1.2",
